Updates for compatibility with PRAW 6+.

--- a/config/bot_config.ini
+++ b/config/bot_config.ini
@@ -9,15 +9,21 @@ update_interval = 360
 generate_stats = False
 www_path = /var/www/redditrover
 
-[Example-LoggedIn]
-description = MassdropBot is a bot that absuses a developer backdoor to shop people awesome products on massdrop.com
+[Poller]
+description = Poller 0.0.1 /u/username
+app_key = 1
+app_secret = 2
+refresh_token = 3
+
+; -----------------------
+;       Plugin Bots
+; -----------------------
+
+[ExampleBot]
+description = user_agent
 is_logged_in = True
 self_ignore = True
-username = MassdropBot
-# Don't bother, those are old keys for a concrete example:
-app_key = PoSlXzJgH2I1Bw
-app_secret = 0OOfZWUVVVtFAxERobIqynA2VhE
-
-[Example-NotLoggedIn]
-description = SmallSubBot lists small subreddits (<100k subscribers) if they're called in titles without being linked.
-is_logged_in = False
+username = username
+app_key = 1
+app_secret = 2
+refresh_token = 3
