--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 plugins/*
-plugins/JiffierBot.py
-plugins/LeafeatorBot.py
-plugins/MassdropBot.py
-plugins/SmallSubBot.py
+
+__pycache__
+
+*.db
+*.log
+
+*.env
+
+creds.ini
