Cleaned up code and removed unneeded files.

--- a/config/bot_config.ini
+++ b/config/bot_config.ini
@@ -6,24 +6,11 @@ self_reply = False
 catch_http_exception = True
 mark_as_read = True
 update_interval = 360
-generate_stats = False
-www_path = /var/www/redditrover
+generate_stats = True
+www_path = /tmp/
 
-[Poller]
-description = Poller 0.0.1 /u/username
-app_key = 1
-app_secret = 2
-refresh_token = 3
-
-; -----------------------
-;       Plugin Bots
-; -----------------------
-
-[ExampleBot]
-description = user_agent
-is_logged_in = True
-self_ignore = True
-username = username
-app_key = 1
-app_secret = 2
-refresh_token = 3
+; [Poller]
+; description = <description> ; (user agent)
+; app_key = <key>
+; app_secret = <secret>
+; refresh_token = <token>
